Added /rotate operation